feat: add buttons

--- a/src/components/Scratch/ScratchImage/scratchImage.scss
+++ b/src/components/Scratch/ScratchImage/scratchImage.scss
@@ -9,4 +9,5 @@
 .image-won {
   width: 57%;
   height: 32%;
+  background-image: url("https://i1.sndcdn.com/avatars-000500544273-6kcyh0-t500x500.jpg");
 }
