--- a/src/pages/smash-button-game/smash.scss
+++ b/src/pages/smash-button-game/smash.scss
@@ -1,8 +1,13 @@
 .smash {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   height: 100vh;
+}
+
+.start {
+  justify-content: flex-start;
 }
 
 .won {
