--- a/src/pages/scratch-game/scratch.scss
+++ b/src/pages/scratch-game/scratch.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 29%;
   height: 100vh;
+  position: "absolute";
 }
 
 .won {
