feat: responsive designs

--- a/src/components/MoreGames/Token/token.scss
+++ b/src/components/MoreGames/Token/token.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables";
+
 .token-cont {
   display: flex;
   justify-content: center;
@@ -14,4 +16,20 @@
 
 .token-txt-cont {
   text-align: left;
+}
+
+@media (min-width: $breakpoints-tablet) {
+  // .token-cont {
+  //   margin-bottom: 216px;
+  // }
+}
+
+@media (max-width: $breakpoints-small) {
+  .token-cont {
+    gap: 20px;
+  }
+  .token-img {
+    width: 108px;
+    height: 113px;
+  }
 }
