--- a/src/components/SmashButton/SmashButtonGame/smashButtonGame.scss
+++ b/src/components/SmashButton/SmashButtonGame/smashButtonGame.scss
@@ -1,4 +1,12 @@
+@import "../../../styles/variables";
+
 .line {
   white-space: pre-line;
-  margin: 25% 0;
+  margin: 50px 0;
+}
+
+@media (min-width: $breakpoints-tablet) {
+  .line {
+    margin: 75px 0;
+  }
 }
