--- a/src/pages/more-games/moreGames.scss
+++ b/src/pages/more-games/moreGames.scss
@@ -1,7 +1,10 @@
+@import "../../styles/variables";
+
 .more-games {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  height: 100vh;
+  gap: 10px;
 }
 
 .mg-cont {
@@ -13,10 +16,12 @@
   font-size: 22px;
   line-height: 32px;
   letter-spacing: -0.8px;
+  margin-top: 40px;
+  margin-bottom: 50px;
 }
 
 .mg-t-m {
-  margin-top: 17%;
+  margin-top: 50px;
 }
 
 .mg-foo {
@@ -25,4 +30,44 @@
 
 .m {
   margin: 0;
+}
+
+.mg-token-cont {
+  width: unset;
+}
+
+@media (min-width: $breakpoints-laptop) {
+  .more-games {
+    flex-direction: row;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+    width: 60vw;
+    margin: auto;
+  }
+
+  .mg-token-cont {
+    margin-bottom: 220px;
+  }
+}
+
+@media (min-width: $breakpoints-tablet) and (max-width: 949px) {
+  .more-games {
+    flex-direction: row;
+    align-items: center;
+    align-self: center;
+    width: 100%;
+  }
+
+  .mg-token-cont {
+    width: 50%;
+    margin-bottom: 214px;
+  }
+
+  .mg-cont {
+    width: 50%;
+  }
+}
+
+@media (min-width: $breakpoints-small) {
 }
