--- a/src/components/MoreGames/Game/game.scss
+++ b/src/components/MoreGames/Game/game.scss
@@ -1,10 +1,12 @@
+@import "../../../styles/variables";
+
 .game-cont {
   display: flex;
   gap: 18px;
   justify-content: center;
   align-items: center;
   align-self: center;
-  margin-bottom: 14px;
+  margin-bottom: 10px;
 }
 
 .desc {
@@ -38,4 +40,15 @@
   height: 89px;
   border: 10px solid #ffffff;
   border-radius: 25px;
+}
+
+@media (max-width: $breakpoints-small) {
+  .game-img {
+    width: 79px;
+    height: 79px;
+  }
+
+  .game-cont {
+    margin-bottom: 0;
+  }
 }
