--- a/src/components/Scratch/ScratchGame/scratchGame.scss
+++ b/src/components/Scratch/ScratchGame/scratchGame.scss
@@ -2,3 +2,10 @@
   margin-bottom: 6%;
   margin-top: 14%;
 }
+
+@media (min-width: 400px) {
+  .wxyz {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+}
