--- a/src/components/Scratch/ScratchImage/scratchImage.scss
+++ b/src/components/Scratch/ScratchImage/scratchImage.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables";
+
 .scratch-image {
   border: 10px solid white;
   background-color: gray;
@@ -10,4 +12,24 @@
   width: 57%;
   height: 32%;
   background-image: url("https://i1.sndcdn.com/avatars-000500544273-6kcyh0-t500x500.jpg");
+}
+
+@media (min-width: $breakpoints-tablet) and (max-width: $breakpoints-desktop) {
+  .scratch-image {
+    width: 450px;
+    height: 450px;
+  }
+}
+
+@media (min-width: 450px) and (max-width: $breakpoints-tablet) {
+  .scratch-image {
+    width: 350px;
+    height: 350px;
+  }
+}
+
+@media (max-width: $breakpoints-small) {
+  .scratch-image {
+    height: 40vh;
+  }
 }
