--- a/src/components/SmashButton/SmashButton/smashButton.scss
+++ b/src/components/SmashButton/SmashButton/smashButton.scss
@@ -11,7 +11,7 @@
   background-position: center;
   background-repeat: no-repeat;
   justify-content: center;
-  font-size: 32px;
+  font-size: 2rem;
 }
 
 .smash-won {
