--- a/src/pages/smash-button-game/smash.scss
+++ b/src/pages/smash-button-game/smash.scss
@@ -1,15 +1,14 @@
 @import "../../styles/variables";
 
 .smash {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  height: 100vh;
-}
-
-.start {
-  justify-content: flex-start;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  // height: 100vh;
+  // display: grid;
+  // grid-template-columns: 1fr;
+  // grid-template-rows: 70px calc(100vh - 140px) 70px;
 }
 
 .won {
@@ -28,7 +27,6 @@
 
 @media (min-width: 450px) {
   .won {
-    margin-top: 50px;
     justify-content: center;
   }
 }
