--- a/src/components/MoreGames/Game/game.scss
+++ b/src/components/MoreGames/Game/game.scss
@@ -42,6 +42,13 @@
   border-radius: 25px;
 }
 
+@media (min-width: $breakpoints-tablet) {
+  .game-img {
+    width: 100px;
+    height: 100px;
+  }
+}
+
 @media (max-width: $breakpoints-small) {
   .game-img {
     width: 79px;
