--- a/src/components/Scratch/ScratchGame/scratchGame.scss
+++ b/src/components/Scratch/ScratchGame/scratchGame.scss
@@ -3,6 +3,13 @@
   margin-top: 14%;
 }
 
+.scratch-img-cont {
+  grid-row: 2 / span 1;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+}
+
 @media (min-width: 400px) {
   .wxyz {
     margin-top: 50px;
