--- a/src/components/Scratch/ScratchImage/scratchImage.scss
+++ b/src/components/Scratch/ScratchImage/scratchImage.scss
@@ -3,18 +3,18 @@
 .scratch-image {
   border: 10px solid white;
   background-color: gray;
-  width: 82%;
   height: 50vh;
   border-radius: 30px;
+  width: 90%;
 }
 
 .image-won {
-  width: 57%;
-  height: 32%;
-  background-image: url("https://i1.sndcdn.com/avatars-000500544273-6kcyh0-t500x500.jpg");
+  height: 35vh;
+  min-height: 256px;
+  width: 80%;
 }
 
-@media (min-width: $breakpoints-tablet) and (max-width: $breakpoints-desktop) {
+@media (min-width: $breakpoints-tablet) {
   .scratch-image {
     width: 450px;
     height: 450px;
