--- a/src/components/Scratch/ScratchWon/scratchWon.scss
+++ b/src/components/Scratch/ScratchWon/scratchWon.scss
@@ -1,8 +1,12 @@
-.margin-token {
-  margin: 4% 0px;
+.won-container {
+  grid-row: 2 / span 1;
+  width: 100%;
+  margin-bottom: 3em;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
 }
 
-.margin-title {
-  margin-top: 25%;
-  margin-bottom: 6%;
+.token-size {
+  font-size: 1.375rem;
 }
