--- a/src/components/SmashButton/Start/start.scss
+++ b/src/components/SmashButton/Start/start.scss
@@ -2,9 +2,33 @@
   font-size: 90px;
 }
 
+.start {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 70px calc(100vh - 140px) 70px;
+}
+
+.start .header {
+  grid-row: 1 / span 1;
+  text-align: center;
+  width: 100%;
+}
+
 .button-container {
   display: flex;
   width: 100%;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  grid-row: 2 / span 1;
+}
+
+.footer {
+  grid-row: 3 / span 1;
+}
+
+@media (min-height: 600px) and (min-width: 600px) {
+  .btn-game {
+    height: 90vh;
+  }
 }
