--- a/src/pages/scratch-game/scratch.scss
+++ b/src/pages/scratch-game/scratch.scss
@@ -1,15 +1,21 @@
 .scratch {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 70px calc(100vh - 140px) 70px;
   height: 100vh;
-  position: "absolute";
+  align-items: center;
 }
 
-.won {
+.scratch .header {
+  grid-row: 1 / span 1;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+}
+
+.scratch-won {
   background-image: url("../../assets/image2.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  justify-content: center;
 }
