--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -8,7 +8,6 @@
   position: absolute;
   right: 50px;
   top: 20px;
-  display: "flex";
   gap: 5px;
 }
 
@@ -38,14 +37,15 @@
 .host {
   font-size: 22px;
   letter-spacing: -0.8px;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  position: absolute;
+  top: 30px;
 }
 
 .title {
-  font-size: 40px;
-  line-height: 32px;
+  font-size: 2.5rem;
+  line-height: 2rem;
   letter-spacing: -0.8px;
+  margin-bottom: 3.15rem;
 }
 
 .button {
@@ -65,21 +65,14 @@
 }
 
 @media (min-width: $breakpoints-tablet) {
-  .host {
-    margin-top: 25px;
-    margin-bottom: 25px;
-  }
 }
 
 @media (max-width: $breakpoints-small) {
-  .host {
-    font-size: 18px;
-  }
   .title {
-    font-size: 30px;
+    font-size: 1.875rem;
   }
 
   .button {
-    font-size: 12px;
+    font-size: 0.75rem;
   }
 }
