--- a/src/components/SmashButton/Start/start.scss
+++ b/src/components/SmashButton/Start/start.scss
@@ -1,5 +1,5 @@
 .smash-title {
-  font-size: 90px;
+  font-size: 5.625rem;
 }
 
 .start {
@@ -18,8 +18,8 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   grid-row: 2 / span 1;
 }
 
