--- a/src/components/MoreGames/Game/game.scss
+++ b/src/components/MoreGames/Game/game.scss
@@ -10,7 +10,7 @@
 }
 
 .desc {
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .game-txt-cont {
@@ -21,7 +21,7 @@
 
 .game-title {
   font-family: "DM Sans Medium";
-  font-size: 15px;
+  font-size: 0.938rem;
   text-align: left;
   font-weight: 700;
   color: white;
@@ -29,7 +29,7 @@
 
 .game-desc {
   font-family: "DM Sans Medium";
-  font-size: 10px;
+  font-size: 0.625rem;
   text-align: left;
   color: white;
   font-weight: 700;
