feat: setting components

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -28,6 +28,11 @@
   border: 1px solid skyblue;
 }
 
+.green {
+  background: green;
+  border: 1px solid green;
+}
+
 .text {
   font-family: "DM Sans Bold";
   text-align: center;
