feat: creating styles

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -40,7 +40,7 @@
 }
 
 .host {
-  font-size: 22px;
+  font-size: 1.375rem;
   letter-spacing: -0.8px;
 }
 
@@ -48,6 +48,17 @@
   font-size: 2.5rem;
   line-height: 2rem;
   letter-spacing: -0.8px;
+}
+
+.layout {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 70px calc(100vh - 140px) 70px;
+  height: 100vh;
+  position: fixed;
+  overflow: hidden;
+  align-items: center;
+  width: 100%;
 }
 
 .button {
