--- a/src/components/CreateGame/StepFour/stepFour.scss
+++ b/src/components/CreateGame/StepFour/stepFour.scss
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .btn-game {
   text-decoration: none;
 }
