--- a/src/components/CreateGame/StepFour/stepFour.scss
+++ b/src/components/CreateGame/StepFour/stepFour.scss
@@ -6,8 +6,9 @@
   align-items: center;
 }
 
-.btn-container {
+.btn-container-four {
   display: flex;
+  width: 100vw;
   flex-direction: row;
   align-items: center;
 }
