--- a/src/components/CreateGame/StepOne/stepOne.scss
+++ b/src/components/CreateGame/StepOne/stepOne.scss
@@ -1,8 +1,13 @@
-.btn-container {
+.btn-container-one {
   display: flex;
   justify-content: center;
+  width: 100vw;
   gap: 1rem;
   padding: 0 1rem;
+}
+
+.btn-size {
+  width: fit-contain;
 }
 
 .step-container {
