--- a/src/components/CreateGame/StepOne/stepOne.scss
+++ b/src/components/CreateGame/StepOne/stepOne.scss
@@ -1,7 +1,8 @@
 .btn-container-one {
   display: flex;
   justify-content: center;
-  width: 100vw;
+  gap: 1rem;
+  width: 80vw;
   gap: 1rem;
   padding: 0 1rem;
 }
