--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -39,6 +39,12 @@
   color: white;
 }
 
+.text-warning {
+  font-family: "DM Sans Bold";
+  text-align: center;
+  color: rgb(253, 253, 64);
+}
+
 .host {
   font-size: 1.375rem;
   letter-spacing: -0.8px;
