--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -82,21 +82,29 @@
   border: none;
   padding-top: 10px;
   padding-bottom: 10px;
-  text-decoration: none;
-}
 
-.button:hover {
-  background: linear-gradient(
-    180deg,
-    rgba(94, 184, 250, 1) 35%,
-    rgba(138, 73, 247, 0.9) 100%
-  );
-}
+  &:hover:not(:disabled) {
+    background: linear-gradient(
+      180deg,
+      rgba(94, 184, 250, 1) 35%,
+      rgba(138, 73, 247, 0.9) 100%
+    );
+  }
 
-.button:active {
-  box-shadow: 13px 20px 40px 10px rgb(0 0 0 / 15%);
-  transform: translateY(4px);
-  /* Moving button 4px to y-axis */
+  &:active:not(:disabled) {
+    box-shadow: 13px 20px 40px 10px rgb(0 0 0 / 15%);
+    transform: translateY(4px);
+    /* Moving button 4px to y-axis */
+  }
+
+  &:disabled {
+    background: linear-gradient(
+      180deg,
+      rgba(94, 184, 250, 0.5) 35%,
+      rgba(138, 73, 247, 0.45) 100%
+    );
+    box-shadow: none;
+  }
 }
 
 @media (max-width: $breakpoints-small) {
