--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,17 @@
 *,
 *::after,
 *::before {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   background-color: #a95efa;
+  font-size: 62.5%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
@@ -32,10 +34,4 @@ code {
   src: local("DM Sans Regular"),
     url("./fonts/DMSans/DMSans-Regular.ttf") format("truetype");
   font-weight: 400;
-}
-
-@media (min-width: 1100px) {
-  body {
-    font-size: 1.125rem;
-  }
 }
