--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,8 @@ $breakpoints-small: 330px;
 $breakpoints-tablet: 768px;
 $breakpoints-laptop: 950px;
 $breakpoints-desktop: 1200px;
+
+$background-color: #a95efa;
+
+$button-color: linear-gradient(180deg, #5eb8fa 0%, #8a49f7 100%);
+$white-color: #ffffff;
