--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,46 +1,26 @@
 .main-title {
-  font-family: "DM Sans Bold";
-  font-weight: 700;
+  @include text;
   font-size: 7.2rem;
-  line-height: 3.2rem;
-  letter-spacing: -0.8px;
-  text-align: center;
 }
 
 .title {
-  font-size: "DM Sans Bold";
-  font-weight: 700;
+  @include text;
   font-size: 4rem;
-  line-height: 3.2rem;
-  letter-spacing: -0.8px;
-  text-align: center;
 }
 
 .host {
-  font-size: "DM Sans Bold";
-  font-weight: 700;
+  @include text;
   font-size: 2.2rem;
-  line-height: 3.2rem;
-  letter-spacing: -0.8px;
-  text-align: center;
 }
 
 .title-description {
-  font-size: "DM Sans Bold";
-  font-weight: 700;
+  @include text;
   font-size: 1.5rem;
-  line-height: 3.2rem;
-  letter-spacing: -0.8px;
-  text-align: center;
 }
 
 .description {
-  font-size: "DM Sans Bold";
-  font-weight: 700;
+  @include text;
   font-size: 1rem;
-  line-height: 3.2rem;
-  letter-spacing: -0.8px;
-  text-align: center;
 }
 
 .warning {
