--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -16,7 +16,7 @@
     background: linear-gradient(
       180deg,
       rgba(94, 184, 250, 1) 35%,
-      rgba(138, 73, 247, 0.9) 100%
+      n rgba(138, 73, 247, 0.9) 100%
     );
   }
 
