--- a/src/components/CreateGame/StepTwo/stepTwo.scss
+++ b/src/components/CreateGame/StepTwo/stepTwo.scss
@@ -12,7 +12,6 @@
   margin-top: 2rem;
   padding: 0.5rem;
   background-color: transparent;
-  text-transform: uppercase;
   border-color: #5eb8fa;
 }
 
@@ -26,37 +25,7 @@
 .thumbnail {
   width: 25%;
   margin: 1rem 0;
-}
-
-.input-error {
-  color: red;
-  margin: 0;
-}
-
-.small-button {
-  background: linear-gradient(180deg, #5eb8fa 0%, #8a49f7 100%);
-  color: #ffffff;
-  border: none;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 1px;
-  font-family: "DM Sans Bold";
-  padding: 0.6rem;
-  cursor: pointer;
-
-  &:hover {
-    background: linear-gradient(
-      180deg,
-      rgba(94, 184, 250, 1) 35%,
-      rgba(138, 73, 247, 0.9) 100%
-    );
-  }
-
-  &:active() {
-    box-shadow: 13px 20px 40px 10px rgb(0 0 0 / 15%);
-    transform: translateY(4px);
-    /* Moving button 4px to y-axis */
-  }
+  max-height: 8rem;
 }
 
 .hide {
