fix: scroll on layout class

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -62,6 +62,7 @@
   grid-template-rows: 70px calc(100vh - 140px) 70px;
   height: 100vh;
   position: fixed;
+  overflow: scroll;
   align-items: center;
   width: 100%;
 }
